<resources>
    <string name="app_name">ScanIt</string>
    <string name="scan_code">Scan Code</string>
    <string name="view_history">View History</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="developer">Developer</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit_message">Are you sure you want to exit?</string>
    <string name="title">ScanIt</string>
    <string name="sub_header">QR Code and Barcode Scanner</string>
    <string name="result">Result</string>
    <string name="data">Data :</string>
    <string name="copy">Copy</string>
    <string name="enter_text">Enter Text</string>
    <string name="generate_code">Generate Code</string>
    <string name="share">Share</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="author_description">Android Developer | Machine Learning and Computer Vision Enthusiast</string>
    <string name="author_name">Varad Mashalkar</string>
    <string name="email">EMail</string>
    <string name="github">GitHub</string>
    <string name="linkedin">LinkedIn</string>
    <string name="history">History</string>
    <string name="date">Date :</string>
</resources>