<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeveloperDetails">

    <TextView
        android:id="@+id/tvDeveloper"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/developer"
        android:textColor="@color/primary_text"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0"
        android:fontFamily="@font/logo_font_resource"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tvDeveloper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/profile_photo"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/developer" />

            <TextView
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_name"
                android:textColor="@color/primary_text"
                android:textStyle="bold"
                android:fontFamily="@font/logo_font_resource"
                android:textSize="35sp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_description"
                android:textColor="@color/primary_text"
                android:fontFamily="@font/logo_font_resource"
                android:textSize="25sp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_gravity="center_horizontal"/>

            <Button
                android:id="@+id/btnEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/round_edge_button"
                android:text="@string/email"
                android:textStyle="bold"
                android:textSize="25sp"
                android:fontFamily="@font/logo_font_resource"/>

            <Button
                android:id="@+id/btnGithub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/round_edge_button"
                android:text="@string/github"
                android:textStyle="bold"
                android:textSize="25sp"
                android:fontFamily="@font/logo_font_resource"/>

            <Button
                android:id="@+id/btnLinkedIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/round_edge_button"
                android:text="@string/linkedin"
                android:textStyle="bold"
                android:textSize="25sp"
                android:fontFamily="@font/logo_font_resource"/>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>