<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_edge_button"
        android:orientation="vertical"
        android:padding="15dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tvHistoryData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data"
            android:textColor="@color/white"
            android:fontFamily="@font/logo_font_resource"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvHistoryDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/date"
            android:textColor="@color/white"
            android:fontFamily="@font/logo_font_resource"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnHistoryCopy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/white"
            android:text="@string/copy_to_clipboard"
            android:fontFamily="@font/logo_font_resource"
            android:textStyle="bold"
            android:textColor="@color/primary_text"/>

        <Button
            android:id="@+id/btnHistoryShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/white"
            android:text="@string/share"
            android:fontFamily="@font/logo_font_resource"
            android:textStyle="bold"
            android:textColor="@color/primary_text"/>

        <Button
            android:id="@+id/btnHistoryAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/white"
            android:text="@string/share"
            android:fontFamily="@font/logo_font_resource"
            android:textStyle="bold"
            android:textColor="@color/primary_text"
            android:visibility="visible"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>